Update package install for volume role

--- a/hieradata/common/roles/volume.yaml
+++ b/hieradata/common/roles/volume.yaml
@@ -9,8 +9,7 @@ include:
     - profile::logging::rsyslog::client
 
 profile::base::common::packages:
-  'python-oslo-policy': {}
-  'python-openstackclient': {}
+  'python2-oslo-policy': {}
 
 profile::openstack::openrc::password:     "%{hiera('cinder_api_password')}"
 profile::openstack::openrc::username:     'cinder'
