--- a/hieradata/common/modules/glance.yaml
+++ b/hieradata/common/modules/glance.yaml
@@ -10,6 +10,7 @@ glance::registry::keystone_password: "%{hiera('glance::api::keystone_password')}
 glance::registry::bind_host: "%{ipaddress_transport1}"
 glance::registry::auth_host: "%{hiera('service__address__keystone_admin')}"
 glance::registry::auth_uri: "http://%{hiera('service__address__keystone')}:5000/"
+glance::registry::identity_uri: "http://%{hiera('service__address__keystone_admin')}:35357/"
 glance::registry::database_connection: "mysql://glance:%{hiera('glance::db::mysql::password')}@%{hiera('service__address__mysql')}/glance"
 
 glance::db::mysql::allowed_hosts:
