--- a/hieradata/common/modules/glance.yaml
+++ b/hieradata/common/modules/glance.yaml
@@ -1,6 +1,7 @@
 glance::api::bind_host: "%{ipaddress_transport1}"
 glance::api::auth_host: "%{hiera('service__address__keystone_admin')}"
 glance::api::auth_uri: "http://%{hiera('service__address__keystone')}:5000/"
+glance::api::identity_uri: "http://%{hiera('service__address__keystone_admin')}:35357/"
 glance::api::database_connection: "mysql://glance:%{hiera('glance::db::mysql::password')}@%{hiera('service__address__mysql')}/glance"
 glance::api::workers: 1
 glance::api::registry_host: "%{hiera('service__address__glance_registry')}"
