Add new nova_api database

--- a/hieradata/common/modules/nova.yaml
+++ b/hieradata/common/modules/nova.yaml
@@ -1,9 +1,10 @@
 ---
 # Shared config (nodes: command, compute)
-nova::db::database_connection:  "mysql://nova:%{hiera('nova::db::mysql::password')}@%{hiera('service__address__mysql')}/nova"
-nova::glance_api_servers:       "%{hiera('service__address__glance_api')}:9292"
-nova::cinder_catalog_info:      'volumev2:cinderv2:internalURL'
-nova::os_region_name:           "%{location}"
+nova::db::database_connection:     "mysql://nova:%{hiera('nova::db::mysql::password')}@%{hiera('service__address__mysql')}/nova"
+nova::db::api_database_connection: "mysql://nova_api:%{hiera('nova::db::mysql_api::password')}@%{hiera('service__address__mysql')}/nova_api"
+nova::glance_api_servers:          "%{hiera('service__address__glance_api')}:9292"
+nova::cinder_catalog_info:         'volumev2:cinderv2:internalURL'
+nova::os_region_name:              "%{location}"
 
 # logging
 nova::use_syslog:           true
@@ -19,6 +20,8 @@ nova::rabbit_hosts:
 
 # mysql database (node: db)
 nova::db::mysql::allowed_hosts:
+  - "%{netpart_transport1}.%" # FIXME
+nova::db::mysql_api::allowed_hosts:
   - "%{netpart_transport1}.%" # FIXME
 
 # keystone auth (node: identity)
