--- a/hieradata/common/modules/nova.yaml
+++ b/hieradata/common/modules/nova.yaml
@@ -2,7 +2,7 @@
 # Shared config (nodes: command, compute)
 nova::db::database_connection:     "mysql://nova:%{hiera('nova::db::mysql::password')}@%{hiera('service__address__mysql')}/nova"
 nova::db::api_database_connection: "mysql://nova_api:%{hiera('nova::db::mysql_api::password')}@%{hiera('service__address__mysql')}/nova_api"
-nova::glance_api_servers:          "%{hiera('service__address__glance_api')}:9292"
+nova::glance_api_servers:          "http://%{hiera('service__address__glance_api')}:9292"
 nova::cinder_catalog_info:         'volumev2:cinderv2:internalURL'
 nova::os_region_name:              "%{location}"
 
@@ -29,18 +29,14 @@ nova::keystone::auth::region:           "%{location}"
 nova::keystone::auth::password:         "%{hiera('nova_api_password')}"
 nova::keystone::auth::public_url:       "%{hiera('endpoint_protocol')}://%{hiera('service__address__nova_public_api')}:8774/v2/%(tenant_id)s"
 nova::keystone::auth::public_url_v3:    "%{hiera('endpoint_protocol')}://%{hiera('service__address__nova_public_api')}:8774/v3"
-nova::keystone::auth::ec2_public_url:   "%{hiera('endpoint_protocol')}://%{hiera('service__address__nova_public_api')}:8773/services/Cloud"
 nova::keystone::auth::admin_url:        "http://%{hiera('service__address__nova_api')}:8774/v2/%(tenant_id)s"
 nova::keystone::auth::admin_url_v3:     "http://%{hiera('service__address__nova_api')}:8774/v3"
-nova::keystone::auth::ec2_admin_url:    "http://%{hiera('service__address__nova_api')}:8773/services/Admin"
 nova::keystone::auth::internal_url:     "http://%{hiera('service__address__nova_api')}:8774/v2/%(tenant_id)s"
 nova::keystone::auth::internal_url_v3:  "http://%{hiera('service__address__nova_api')}:8774/v3"
-nova::keystone::auth::ec2_internal_url: "http://%{hiera('service__address__nova_api')}:8773/services/Cloud"
 
 # api (node: command)
 nova::api::enabled:                     true
 nova::api::api_bind_address:            "%{ipaddress_transport1}"
-nova::api::auth_version:                'v3.0'
 nova::api::admin_password:              "%{hiera('nova_api_password')}"
 nova::api::auth_uri:                    "http://%{hiera('service__address__keystone')}:5000/"
 nova::api::identity_uri:                "http://%{hiera('service__address__keystone_admin')}:35357/"
@@ -60,9 +56,9 @@ nova::consoleauth::enabled: true
 
 # neutron network (node: compute)
 nova::network::neutron::neutron_url:            "http://%{hiera('service__address__neutron_server')}:9696"
-nova::network::neutron::neutron_admin_auth_url: "http://%{hiera('service__address__keystone_admin')}:35357/v2.0"
+nova::network::neutron::neutron_auth_url:  "http://%{hiera('service__address__keystone_admin')}:35357"
 nova::network::neutron::neutron_region_name:    "%{location}"
-nova::network::neutron::neutron_admin_password: "%{hiera('neutron_api_password')}"
+nova::network::neutron::neutron_password: "%{hiera('neutron_api_password')}"
 
 # compute (node: compute)
 nova::compute::enabled:                         true
