--- a/hieradata/common/roles/dashboard.yaml
+++ b/hieradata/common/roles/dashboard.yaml
@@ -11,7 +11,7 @@ profile::openstack::openrc::filename: '/root/keystonerc_admin'
 
 profile::base::network::node_multinic: true
 profile::base::common::packages:
-  'python-oslo-log': {}
+  'python2-oslo-log': {}
   'python-openstackclient': {}
 
 dashboard_referer:    '^https://dashboard\.'
