--- a/hieradata/common/roles/volume.yaml
+++ b/hieradata/common/roles/volume.yaml
@@ -9,6 +9,7 @@ include:
     - profile::logging::rsyslog::client
 
 profile::base::common::packages:
+  'python-openstackclient': {}
   'python2-oslo-policy': {}
 
 profile::openstack::openrc::password:     "%{hiera('cinder_api_password')}"
