Use mitaka repo only on identity

--- a/hieradata/common/common.yaml
+++ b/hieradata/common/common.yaml
@@ -23,7 +23,7 @@ domain_public: "%{::domain}"
 domain_trp:    "%{::domain}"
 domain_mgmt:   "%{::domain}"
 
-openstack_version: 'mitaka'
+openstack_version: 'liberty'
 
 valid_location_tags:
   - bgo
