Use updated puppet-keystone module, new profile and hieradata to work with new module

--- a/hieradata/common/modules/horizon.yaml
+++ b/hieradata/common/modules/horizon.yaml
@@ -24,9 +24,9 @@ horizon::neutron_options:
   'enable_vpn': false
 
 horizon::websso_enabled: true
-horizon::websso_initial_choice: oidc
+horizon::websso_initial_choice: openidc
 horizon::websso_choices:
-  oidc: Dataporten
+  openidc: Dataporten
   credentials: Local user
 
 # logging
