Set mitaka only in volume role

--- a/hieradata/common/roles/volume.yaml
+++ b/hieradata/common/roles/volume.yaml
@@ -8,6 +8,8 @@ include:
     - profile::openstack::openrc
     - profile::logging::rsyslog::client
 
+openstack_version: 'mitaka'
+
 profile::base::common::packages:
   'python-openstackclient': {}
   'python2-oslo-policy': {}
