--- a/hieradata/common/roles/network.yaml
+++ b/hieradata/common/roles/network.yaml
@@ -7,6 +7,8 @@ include:
     - profile::openstack::openrc
     - profile::logging::rsyslog::client
 
+openstack_version: 'mitaka'
+
 profile::base::common::packages:
   'python-etcd': {}
 
