Add keystone middleware dependency package

--- a/hieradata/common/roles/volume.yaml
+++ b/hieradata/common/roles/volume.yaml
@@ -13,6 +13,7 @@ openstack_version: 'mitaka'
 profile::base::common::packages:
   'python-openstackclient': {}
   'python2-oslo-policy': {}
+  'python-keystonemiddleware': {}
 
 profile::openstack::openrc::password:     "%{hiera('cinder_api_password')}"
 profile::openstack::openrc::username:     'cinder'
