Add keystone middleware dependency package

--- a/hieradata/common/roles/volume.yaml
+++ b/hieradata/common/roles/volume.yaml
@@ -11,6 +11,7 @@ include:
 profile::base::common::packages:
   'python-openstackclient': {}
   'python2-oslo-policy': {}
+  'python-keystonemiddleware': {}
 
 profile::openstack::openrc::password:     "%{hiera('cinder_api_password')}"
 profile::openstack::openrc::username:     'cinder'
