Upgrade dashboard to mitaka

--- a/hieradata/common/roles/dashboard.yaml
+++ b/hieradata/common/roles/dashboard.yaml
@@ -7,6 +7,8 @@ include:
     - profile::application::himlarcli
     - profile::logging::rsyslog::client
 
+openstack_version: 'mitaka' #FIXME
+
 profile::openstack::openrc::filename: '/root/keystonerc_admin'
 
 profile::base::network::node_multinic: true
