Use mitaka repo on upgrade console

--- a/hieradata/common/roles/console.yaml
+++ b/hieradata/common/roles/console.yaml
@@ -3,6 +3,8 @@ include:
   default:
     - profile::openstack::compute::consoleproxy
 
+openstack_version: 'mitaka' #FIXME
+
 profile::openstack::compute::consoleproxy::spice: true
 
 nova::config::nova_config:
