--- a/hieradata/common/common.yaml
+++ b/hieradata/common/common.yaml
@@ -206,10 +206,11 @@ profile::network::services::dns_records:
     "db01.%{hiera('domain_trp')}":                          "%{hiera('netcfg_trp_netpart')}.41"
     "db02.%{hiera('domain_trp')}":                          "%{hiera('netcfg_trp_netpart')}.42"
     "image.%{hiera('domain_trp')}":                         "%{hiera('netcfg_trp_netpart')}.86"
-    "volume.%{hiera('domain_trp')}":                        "%{hiera('netcfg_trp_netpart')}.86"
-    "compute.%{hiera('domain_trp')}":                       "%{hiera('netcfg_trp_netpart')}.86"
-    "network.%{hiera('domain_trp')}":                       "%{hiera('netcfg_trp_netpart')}.86"
-    "identity.%{hiera('domain_trp')}":                      "%{hiera('netcfg_trp_netpart')}.86"
+    "volume.%{hiera('domain_trp')}":                        "%{hiera('netcfg_trp_netpart')}.46"
+    "compute.%{hiera('domain_trp')}":                       "%{hiera('netcfg_trp_netpart')}.66"
+    "network01.%{hiera('domain_trp')}":                     "%{hiera('netcfg_trp_netpart')}.71"
+    "network02.%{hiera('domain_trp')}":                     "%{hiera('netcfg_trp_netpart')}.72"
+    "identity.%{hiera('domain_trp')}":                      "%{hiera('netcfg_trp_netpart')}.81"
 
 #
 # Network configuration data
