--- a/hieradata/nodes/test02/test02-network-02.yaml
+++ b/hieradata/nodes/test02/test02-network-02.yaml
@@ -1,21 +1,21 @@
 ---
 etcd::initial_advertise_peer_urls:
-  - "http://%{hiera('netcfg_trp_netpart')}.71:2379"
+  - "http://%{hiera('netcfg_trp_netpart')}.72:2379"
 etcd::advertise_client_urls:
-  - "http://%{hiera('netcfg_trp_netpart')}.71:2379"
+  - "http://%{hiera('netcfg_trp_netpart')}.72:2379"
 
 network::interfaces_hash:
   'eth0':
-    ipaddress: '172.28.32.71'
+    ipaddress: '172.28.32.72'
     netmask:   '255.255.255.0'
-    gateway:   "%{hiera('netcfg_mgmt_gateway')}"
+    gateway:   '172.28.32.10'
     mtu:       '1500'
     peerdns:   'yes'
     dns1:      "%{hiera('netcfg_dns_server1')}"
     domain:    'test.iaas.uio.no'
     defroute:  'yes'
   'eth1':
-    ipaddress: '172.30.32.71'
+    ipaddress: '172.30.32.72'
     netmask:   '255.255.255.0'
     gateway:   '172.30.32.10'
     defroute:  'no'
