--- a/hieradata/dev/common.yaml
+++ b/hieradata/dev/common.yaml
@@ -93,8 +93,8 @@ profile::network::services::dns_options:
 #
 profile::network::services::dns_records:
   A:
-    "dashboard.%{hiera('domain_public')}":                "%{hiera('netcfg_public_netpart')}.51"
-    "access.%{hiera('domain_public')}":                   "%{hiera('netcfg_public_netpart')}.56"
+    "dashboard.%{hiera('domain_frontend')}":              "%{hiera('netcfg_public_netpart')}.51"
+    "access.%{hiera('domain_frontend')}":                 "%{hiera('netcfg_public_netpart')}.56"
     "console.%{hiera('domain_public')}":                  "%{hiera('netcfg_public_netpart')}.61"
     "api.%{hiera('domain_public')}":                      "%{hiera('netcfg_public_netpart')}.86"
     "identity.api.%{hiera('domain_public')}":             "%{hiera('netcfg_public_netpart')}.86"
@@ -102,6 +102,7 @@ profile::network::services::dns_records:
     "network.api.%{hiera('domain_public')}":              "%{hiera('netcfg_public_netpart')}.86"
     "compute.api.%{hiera('domain_public')}":              "%{hiera('netcfg_public_netpart')}.86"
     "volume.api.%{hiera('domain_public')}":               "%{hiera('netcfg_public_netpart')}.86"
+    "status.%{hiera('domain_frontend')}":                 "%{hiera('netcfg_public_netpart')}.86"
 
 #
 ## Secret data which for other environments are stored ooutside of this data tree
