--- a/hieradata/common/modules/neutron.yaml
+++ b/hieradata/common/modules/neutron.yaml
@@ -23,8 +23,7 @@ neutron::server::notifications::region_name:  "%{::location}"
 neutron::agents::dhcp::enabled: false
 
 neutron::db::mysql::allowed_hosts:
-  - "%{netpart_trp1}.%"
-  - "network.%{hiera('domain_trp')}"
+  - "%{hiera('netcfg_trp_netpart')}.%"
 
 # rabbit mq
 neutron::rabbit_user:           'neutron'
