--- a/hieradata/nodes/test01/test01-network-01.yaml
+++ b/hieradata/nodes/test01/test01-network-01.yaml
@@ -6,12 +6,16 @@ etcd::advertise_client_urls:
 
 network::interfaces_hash:
   'eth0':
-    ipaddress: '172.28.0.71'
-    netmask:   '255.255.255.0'
-    gateway:   '172.28.0.10'
+    ipaddress: "%{hiera('netcfg_mgmt_netpart')}.71"
+    netmask:   "%{hiera('netcfg_mgmt_netmask')}"
+    gateway:   "%{hiera('netcfg_mgmt_gateway')}"
     mtu:       '1500'
+    peerdns:   'yes'
+    dns1:      "%{hiera('netcfg_dns_server1')}"
+    domain:    "%{hiera('domain_mgmt')}"
+    defroute:  'yes'
   'eth1':
-    ipaddress: '172.30.0.71'
-    netmask:   '255.255.255.0'
+    ipaddress: "%{hiera('netcfg_trp_netpart')}.71"
+    netmask:   "%{hiera('netcfg_trp_netmask')}"
+    gateway:   "%{hiera('netcfg_trp_gateway')}"
     defroute:  'no'
-    mtu:       '1500'
