--- a/hieradata/nodes/test02/test02-network-02.yaml
+++ b/hieradata/nodes/test02/test02-network-02.yaml
@@ -6,16 +6,16 @@ etcd::advertise_client_urls:
 
 network::interfaces_hash:
   'eth0':
-    ipaddress: '172.28.32.72'
-    netmask:   '255.255.255.0'
-    gateway:   '172.28.32.10'
+    ipaddress: "%{hiera('netcfg_mgmt_netpart')}.72"
+    netmask:   "%{hiera('netcfg_mgmt_netmask')}"
+    gateway:   "%{hiera('netcfg_mgmt_gateway')}"
     mtu:       '1500'
     peerdns:   'yes'
     dns1:      "%{hiera('netcfg_dns_server1')}"
-    domain:    'test.iaas.uio.no'
+    domain:    "%{hiera('domain_mgmt')}"
     defroute:  'yes'
   'eth1':
-    ipaddress: '172.30.32.72'
-    netmask:   '255.255.255.0'
-    gateway:   '172.30.32.10'
+    ipaddress: "%{hiera('netcfg_trp_netpart')}.72"
+    netmask:   "%{hiera('netcfg_trp_netmask')}"
+    gateway:   "%{hiera('netcfg_trp_gateway')}"
     defroute:  'no'
