--- a/hieradata/test01/roles/api.yaml
+++ b/hieradata/test01/roles/api.yaml
@@ -11,3 +11,7 @@ profile::highavailability::loadbalancing::haproxy::allow_from_network:
   - '129.177.10.212/32' # raymond
   - '129.240.6.13/32'   # usit
   - '129.240.6.14/32'   # usit
+
+network:
+    server_names:       ['%{::location}-network-02']
+    ipaddresses:        ["%{hiera('netcfg_trp_netpart')}.72"]
